--- a/index.html
+++ b/index.html
@@ -40,16 +40,22 @@
         <section class="products">
             <h2>Featured Products</h2>
             <div class="product-grid">
-                <div class="product-card" data-usd="6.25" data-eur="5.95">
-                    <img src="herbs.jpg" alt="Herbs">
-                    <h3>Herbal Blend</h3>
-                    <p class="price">USD $6.25</p>
+                <div class="product-card" data-usd="168.25" data-eur="160.00">
+                    <img src="product001.jpg" alt="Herbs">
+                    <h3>Mimosa hostilis Inner Root Bark (Powder)</h3>
+                    <p class="price">USD $168.25</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="product-card" data-usd="3.45" data-eur="3.25">
-                    <img src="incense.jpg" alt="Incense">
-                    <h3>Incense Sticks</h3>
-                    <p class="price">USD $3.45</p>
+                <div class="product-card" data-usd="126.39" data-eur="120.00">
+                    <img src="product002.jpg" alt="Incense">
+                    <h3>Mimosa hostilis Inner Root Bark (Whole)</h3>
+                    <p class="price">USD $126.39</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card" data-usd="203.41" data-eur="193.12">
+                    <img src="product003.jpg" alt="Incense">
+                    <h3>Mimosa hostilis Inner Root Bark (Shredded)</h3>
+                    <p class="price">USD $203.41</p>
                     <button>Add to Cart</button>
                 </div>
                 <!-- Adicione mais produtos aqui -->
@@ -77,9 +83,9 @@
             </div>
             <div class="footer-section">
                 <h4>Contact Us</h4>
-                <p>Email: support@mayaherbs.com</p>
-                <p>Phone: +1 234 567 890</p>
-                <p>Address: 123 Herbal Way, Green City</p>
+                <p>Email: support@dinizteam.com</p>
+                <p>WhatsApp: +55 83 99347-8491</p>
+                
             </div>
         </div>
         <div class="footer-bottom">
