--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product-card" data-usd="168.25" data-eur="160.00">
-                    <img src="product001.jpg" alt="Herbs">
+                    <img src="product001.jpg" alt="MHRB">
                     <h3>Mimosa hostilis Inner Root Bark (Powder)</h3>
                     <p class="price">USD $168.25</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="product-card" data-usd="126.39" data-eur="120.00">
-                    <img src="product002.jpg" alt="Incense">
+                    <img src="product002.jpg" alt="MHRB">
                     <h3>Mimosa hostilis Inner Root Bark (Whole)</h3>
                     <p class="price">USD $126.39</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="product-card" data-usd="203.41" data-eur="193.12">
-                    <img src="product003.jpg" alt="Incense">
+                    <img src="product003.jpg" alt="MHRB">
                     <h3>Mimosa hostilis Inner Root Bark (Shredded)</h3>
                     <p class="price">USD $203.41</p>
                     <button>Add to Cart</button>
